--- a/views/about.html
+++ b/views/about.html
@@ -1,4 +1,4 @@
-<div id="bg" ng-init="home = true;" >
+<div id="bg" ng-init="home = true;" class="viewFade">
   <div id="aboutMe" ng-class="{'selfie' : home}">
     <h1>Hi, I'm Vak</h1>
     <div class="about animated">
