--- a/views/contact.html
+++ b/views/contact.html
@@ -4,10 +4,10 @@
   <div ng-message="email">Please enter a valid email</div>
 </script>
 
-<div id="contactPage">
+<div id="contactPage" class="viewFade">
   <h4 id="instructions">Would you like to send me a message? Fillout this form!</h4>
 
-  <div class="wrapper" ng-controller="contactController">
+  <div class="wrapper">
     <div class="one">
       <div>
       <form
