--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-fixed-top" ng-controller="artController as art">
+<nav class="navbar navbar-fixed-top">
 	<a class="nav navbar-nav navbar-brand navbar-right" href="#">Vak Kobiashvili</a>
   <div class="container-fluid">
     <div class="navbar-header">
