--- a/styles/stylesheets/screen.css
+++ b/styles/stylesheets/screen.css
@@ -87,41 +87,41 @@ nav {
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.5);
   height: 100px;
 }
-/* line 26, ../sass/screen.scss */
+/* line 25, ../sass/screen.scss */
 nav #extLinks {
   padding-left: 7px;
   padding-top: 10px;
   font-size: 1.2em;
 }
-/* line 30, ../sass/screen.scss */
+/* line 29, ../sass/screen.scss */
 nav #extLinks a {
   color: black;
   margin: 0 6px;
 }
-/* line 36, ../sass/screen.scss */
+/* line 35, ../sass/screen.scss */
 nav div ul {
   padding-left: 80px;
 }
-/* line 38, ../sass/screen.scss */
+/* line 37, ../sass/screen.scss */
 nav div ul li {
   padding: 0;
 }
-/* line 40, ../sass/screen.scss */
+/* line 39, ../sass/screen.scss */
 nav div ul li a {
   margin-top: 10px;
   color: black;
 }
-/* line 43, ../sass/screen.scss */
+/* line 42, ../sass/screen.scss */
 nav div ul li a:hover {
   position: relative;
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.5);
 }
-/* line 47, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
 nav div ul li a i {
   opacity: .4;
   margin-right: 5px;
 }
-/* line 55, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 nav button {
   position: relative;
   top: -5px;
@@ -130,12 +130,12 @@ nav button {
   width: 50px;
   height: 40px;
 }
-/* line 62, ../sass/screen.scss */
+/* line 61, ../sass/screen.scss */
 nav button i {
   position: relative;
   top: -5px;
 }
-/* line 67, ../sass/screen.scss */
+/* line 66, ../sass/screen.scss */
 nav .navbar-brand {
   font-size: 2em;
   letter-spacing: 5px;
@@ -145,15 +145,15 @@ nav .navbar-brand {
   position: absolute;
   right: 10px;
 }
-/* line 76, ../sass/screen.scss */
+/* line 75, ../sass/screen.scss */
 nav .navbar-brand:focus {
   color: black;
 }
-/* line 79, ../sass/screen.scss */
+/* line 78, ../sass/screen.scss */
 nav .navbar-brand:hover {
   color: #ff5f14;
 }
-/* line 83, ../sass/screen.scss */
+/* line 82, ../sass/screen.scss */
 nav .navbar-toggle {
   float: left;
   position: absolute;
@@ -161,42 +161,42 @@ nav .navbar-toggle {
   left: 50px;
   font-size: 1.3em;
 }
-/* line 90, ../sass/screen.scss */
+/* line 89, ../sass/screen.scss */
 nav .container-fluid {
   background-color: white;
 }
-/* line 96, ../sass/screen.scss */
+/* line 95, ../sass/screen.scss */
 nav .collapse.in {
   max-height: 500px !important;
 }
-/* line 99, ../sass/screen.scss */
+/* line 98, ../sass/screen.scss */
 nav .in {
   border-bottom: 2px solid rgba(255, 95, 20, 0.9);
 }
 
 @media (max-width: 1060px) {
-  /* line 106, ../sass/screen.scss */
+  /* line 105, ../sass/screen.scss */
   .navbar-brand {
     visibility: hidden;
   }
 }
 @media (max-width: 766px) {
-  /* line 111, ../sass/screen.scss */
+  /* line 110, ../sass/screen.scss */
   .navbar-nav {
     padding-top: 40px;
   }
 
-  /* line 116, ../sass/screen.scss */
+  /* line 115, ../sass/screen.scss */
   #extLinks {
     visibility: hidden;
   }
 }
-/* line 122, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 #bg {
   border-bottom: 3px solid #ff5f14;
   outline: 1px solid rgba(0, 0, 0, 0.3);
 }
-/* line 125, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 #bg #aboutMe {
   position: relative;
   width: 100%;
@@ -208,11 +208,11 @@ nav .in {
   margin: 0 auto;
   color: #fdfcfc;
 }
-/* line 135, ../sass/screen.scss */
+/* line 134, ../sass/screen.scss */
 #bg #aboutMe ul {
   padding: 0;
 }
-/* line 141, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 #bg #summary {
   color: black;
   position: relative;
@@ -222,7 +222,7 @@ nav .in {
   font-size: 1.3em;
   max-width: 800px;
 }
-/* line 150, ../sass/screen.scss */
+/* line 149, ../sass/screen.scss */
 #bg #summary #aboutBox {
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.5);
   background-color: white;
@@ -233,57 +233,57 @@ nav .in {
   color: rgba(0, 0, 0, 0.9);
   min-width: 460px;
 }
-/* line 159, ../sass/screen.scss */
+/* line 158, ../sass/screen.scss */
 #bg #summary #aboutBox h2 {
   color: black;
 }
-/* line 162, ../sass/screen.scss */
+/* line 161, ../sass/screen.scss */
 #bg #summary #aboutBox p {
   font-size: 14px;
   opacity: .8;
 }
-/* line 166, ../sass/screen.scss */
+/* line 165, ../sass/screen.scss */
 #bg #summary #aboutBox span {
   font-weight: bold;
   color: black;
 }
-/* line 172, ../sass/screen.scss */
+/* line 171, ../sass/screen.scss */
 #bg #essay {
   margin-top: 30px;
   color: black;
   padding: 5px;
   min-width: 500px;
 }
-/* line 178, ../sass/screen.scss */
+/* line 177, ../sass/screen.scss */
 #bg #essay ul {
   line-height: 23px;
   padding-left: 20px;
 }
-/* line 181, ../sass/screen.scss */
+/* line 180, ../sass/screen.scss */
 #bg #essay ul li {
   padding-left: 5px;
   list-style-type: square;
 }
-/* line 186, ../sass/screen.scss */
+/* line 185, ../sass/screen.scss */
 #bg #essay h3 {
   font-size: 2.5em;
 }
-/* line 189, ../sass/screen.scss */
+/* line 188, ../sass/screen.scss */
 #bg #essay h4 {
   margin-top: 20px;
   font-size: 1.3em;
   text-decoration: underline;
 }
-/* line 195, ../sass/screen.scss */
+/* line 194, ../sass/screen.scss */
 #bg #techList {
   margin-top: 20px;
 }
-/* line 197, ../sass/screen.scss */
+/* line 196, ../sass/screen.scss */
 #bg #techList ul {
   padding: 0 20px;
 }
 
-/* line 201, ../sass/screen.scss */
+/* line 200, ../sass/screen.scss */
 .selfie {
   height: 80vh;
   position: relative;
@@ -293,13 +293,13 @@ nav .in {
   background-position: center center;
 }
 
-/* line 214, ../sass/screen.scss */
+/* line 213, ../sass/screen.scss */
 #mainContent {
   padding: 0 50px;
   max-width: 1300px;
-  margin: 0 auto;
+  margin-top: 140px auto 0 auto;
 }
-/* line 219, ../sass/screen.scss */
+/* line 218, ../sass/screen.scss */
 #mainContent art-disp div {
   background: black;
   margin-bottom: 20px;
@@ -314,7 +314,7 @@ nav .in {
   object-fit: contain;
   max-height: 700px;
 }
-/* line 232, ../sass/screen.scss */
+/* line 231, ../sass/screen.scss */
 #mainContent art-disp div img {
   overflow: auto;
   display: inline-block;
@@ -325,7 +325,7 @@ nav .in {
   min-height: 300px;
   max-height: 600px;
 }
-/* line 242, ../sass/screen.scss */
+/* line 241, ../sass/screen.scss */
 #mainContent art-disp div button {
   vertical-align: top;
   display: inline-block;
@@ -343,43 +343,43 @@ nav .in {
   color: #ff5f14;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-/* line 259, ../sass/screen.scss */
+/* line 258, ../sass/screen.scss */
 #mainContent art-disp div #left {
   left: 0;
 }
-/* line 260, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 #mainContent art-disp div #right {
   right: 0;
 }
-/* line 261, ../sass/screen.scss */
+/* line 260, ../sass/screen.scss */
 #mainContent art-disp div #ex1 {
   width: 80%;
 }
-/* line 264, ../sass/screen.scss */
+/* line 263, ../sass/screen.scss */
 #mainContent art-disp div .zoom {
   display: inline-block;
   position: relative;
 }
-/* line 268, ../sass/screen.scss */
+/* line 267, ../sass/screen.scss */
 #mainContent art-disp div .zoom img {
   display: inline-block;
 }
-/* line 271, ../sass/screen.scss */
+/* line 270, ../sass/screen.scss */
 #mainContent art-disp div .zoom img::selection {
   background-color: transparent;
 }
-/* line 275, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
 #mainContent art-gall {
   flex: 1;
 }
-/* line 277, ../sass/screen.scss */
+/* line 276, ../sass/screen.scss */
 #mainContent art-gall .thumbnail {
   height: 275px;
   outline: 0;
   border: none;
   position: relative;
 }
-/* line 282, ../sass/screen.scss */
+/* line 281, ../sass/screen.scss */
 #mainContent art-gall .thumbnail img {
   object-fit: cover;
   height: 265px;
@@ -393,14 +393,14 @@ nav .in {
   border: 2px solid grey;
   box-shadow: 0 3px 10px rgba(100, 100, 100, 0.5);
 }
-/* line 296, ../sass/screen.scss */
+/* line 295, ../sass/screen.scss */
 #mainContent art-gall button {
   width: 100%;
   font-size: 1.5em;
   border: 1px solid #ff5f14;
   margin-bottom: 30px;
 }
-/* line 301, ../sass/screen.scss */
+/* line 300, ../sass/screen.scss */
 #mainContent art-gall button:focus {
   outline: none;
 }
@@ -408,15 +408,31 @@ nav .in {
 /* line 305, ../sass/screen.scss */
 #videos {
   flex: 1;
+  margin-top: 140px;
 }
-/* line 307, ../sass/screen.scss */
+/* line 308, ../sass/screen.scss */
+#videos .embed-responsive {
+  background-color: black !important;
+  width: 70%;
+  max-height: 500px;
+  margin: 20px auto;
+}
+/* line 313, ../sass/screen.scss */
+#videos .embed-responsive .embed-responsive-item {
+  width: 100%;
+}
+/* line 317, ../sass/screen.scss */
+#videos .col-xs-12 {
+  padding: 50px;
+}
+/* line 320, ../sass/screen.scss */
 #videos .thumbnail {
   height: 275px;
   outline: 0;
   border: none;
   position: relative;
 }
-/* line 312, ../sass/screen.scss */
+/* line 325, ../sass/screen.scss */
 #videos .thumbnail img {
   object-fit: cover;
   height: 265px;
@@ -431,22 +447,22 @@ nav .in {
   box-shadow: 0 3px 10px rgba(100, 100, 100, 0.5);
 }
 
-/* line 328, ../sass/screen.scss */
+/* line 341, ../sass/screen.scss */
 #instructions {
   text-align: center;
 }
 
-/* line 329, ../sass/screen.scss */
+/* line 342, ../sass/screen.scss */
 #contactPage {
   padding: 0 100px;
   min-width: 500px;
   max-width: 800px;
   width: auto;
-  margin: 0 auto;
+  margin: 140px auto 0 auto;
   font-size: 16px;
   line-height: 1.5em;
 }
-/* line 337, ../sass/screen.scss */
+/* line 350, ../sass/screen.scss */
 #contactPage .wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -454,7 +470,7 @@ nav .in {
   grid-auto-rows: minmax(100px, auto);
   height: 600px;
 }
-/* line 343, ../sass/screen.scss */
+/* line 356, ../sass/screen.scss */
 #contactPage .wrapper .one {
   grid-column: 1;
   grid-row: 1;
@@ -463,38 +479,38 @@ nav .in {
   overflow: auto;
   min-width: 150px;
 }
-/* line 350, ../sass/screen.scss */
+/* line 363, ../sass/screen.scss */
 #contactPage .wrapper .one div {
   width: auto;
   display: block;
   text-align: center;
   overflow: auto;
 }
-/* line 355, ../sass/screen.scss */
+/* line 368, ../sass/screen.scss */
 #contactPage .wrapper .one div form {
   margin-top: 20px;
   text-align: center;
 }
-/* line 358, ../sass/screen.scss */
+/* line 371, ../sass/screen.scss */
 #contactPage .wrapper .one div form .errorMessage {
   font-size: 13px;
   height: 25px;
 }
-/* line 362, ../sass/screen.scss */
+/* line 375, ../sass/screen.scss */
 #contactPage .wrapper .one div form .invalid {
   border: 2px solid red !important;
 }
-/* line 363, ../sass/screen.scss */
+/* line 376, ../sass/screen.scss */
 #contactPage .wrapper .one div form .valid {
   border: 2px solid lightgreen !important;
 }
-/* line 367, ../sass/screen.scss */
+/* line 380, ../sass/screen.scss */
 #contactPage .wrapper .two {
   grid-column: 2;
   grid-row: 1;
   display: block;
 }
-/* line 371, ../sass/screen.scss */
+/* line 384, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox {
   border-radius: 2px;
   height: auto;
@@ -509,16 +525,16 @@ nav .in {
   display: block;
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.5);
 }
-/* line 384, ../sass/screen.scss */
+/* line 397, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox button {
   margin-bottom: 20px;
 }
-/* line 385, ../sass/screen.scss */
+/* line 398, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox #preview {
   padding: 10px 25px;
   background-color: rgba(200, 200, 200, 0.1);
 }
-/* line 389, ../sass/screen.scss */
+/* line 402, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox #title {
   width: auto;
   height: 40px;
@@ -529,7 +545,7 @@ nav .in {
   margin-left: 25px;
   text-align: left;
 }
-/* line 398, ../sass/screen.scss */
+/* line 411, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox #title i {
   color: lightgreen;
   font-size: 25px;
@@ -539,16 +555,16 @@ nav .in {
   right: 10px;
 }
 
-/* line 411, ../sass/screen.scss */
+/* line 424, ../sass/screen.scss */
 #success {
   text-align: center;
 }
 
-/* line 414, ../sass/screen.scss */
+/* line 427, ../sass/screen.scss */
 .viewFade {
   margin-top: 140px;
-  -webkit-animation: fadein .2s linear forwards;
-  animation: fadein .2s linear forwards;
+  -webkit-animation: fadein .3s linear forwards;
+  animation: fadein .3s linear forwards;
 }
 
 @keyframes fadein {
@@ -562,39 +578,39 @@ nav .in {
     opacity: 1;
   }
 }
-/* line 424, ../sass/screen.scss */
+/* line 437, ../sass/screen.scss */
 .about {
   opacity: 0;
 }
 
-/* line 427, ../sass/screen.scss */
+/* line 440, ../sass/screen.scss */
 .about.animated {
   animation-name: intro;
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
 
-/* line 432, ../sass/screen.scss */
+/* line 445, ../sass/screen.scss */
 .about.animated:nth-child(2) {
   animation-delay: .3s;
 }
 
-/* line 433, ../sass/screen.scss */
+/* line 446, ../sass/screen.scss */
 .about.animated:nth-child(3) {
   animation-delay: 1.8s;
 }
 
-/* line 434, ../sass/screen.scss */
+/* line 447, ../sass/screen.scss */
 .about.animated:nth-child(4) {
   animation-delay: 3.5s;
 }
 
-/* line 436, ../sass/screen.scss */
+/* line 449, ../sass/screen.scss */
 .list {
   opacity: 0;
 }
 
-/* line 439, ../sass/screen.scss */
+/* line 452, ../sass/screen.scss */
 .list.animated {
   animation-name: fadeInDown;
   animation-duration: 1s;
@@ -602,52 +618,52 @@ nav .in {
   animation-fill-mode: forwards;
 }
 
-/* line 445, ../sass/screen.scss */
+/* line 458, ../sass/screen.scss */
 .list.animated:nth-child(2) {
   animation-delay: 5.6s;
 }
 
-/* line 446, ../sass/screen.scss */
+/* line 459, ../sass/screen.scss */
 .list.animated:nth-child(3) {
   animation-delay: 6.2s;
 }
 
-/* line 447, ../sass/screen.scss */
+/* line 460, ../sass/screen.scss */
 .list.animated:nth-child(4) {
   animation-delay: 6.8s;
 }
 
-/* line 448, ../sass/screen.scss */
+/* line 461, ../sass/screen.scss */
 .list.animated:nth-child(5) {
   animation-delay: 7.4s;
 }
 
-/* line 449, ../sass/screen.scss */
+/* line 462, ../sass/screen.scss */
 .list.animated:nth-child(6) {
   animation-delay: 8.0s;
 }
 
-/* line 450, ../sass/screen.scss */
+/* line 463, ../sass/screen.scss */
 .list.animated:nth-child(7) {
   animation-delay: 8.6s;
 }
 
-/* line 451, ../sass/screen.scss */
+/* line 464, ../sass/screen.scss */
 .list.animated:nth-child(8) {
   animation-delay: 9.2s;
 }
 
-/* line 452, ../sass/screen.scss */
+/* line 465, ../sass/screen.scss */
 .list.animated:nth-child(9) {
   animation-delay: 9.8s;
 }
 
-/* line 453, ../sass/screen.scss */
+/* line 466, ../sass/screen.scss */
 .list.animated:nth-child(10) {
   animation-delay: 10.4s;
 }
 
-/* line 454, ../sass/screen.scss */
+/* line 467, ../sass/screen.scss */
 .list.animated:nth-child(11) {
   animation-delay: 11.0s;
 }
@@ -672,7 +688,7 @@ nav .in {
     transform: none;
   }
 }
-/* line 477, ../sass/screen.scss */
+/* line 490, ../sass/screen.scss */
 .hvr-grow {
   display: inline-block;
   vertical-align: middle;
@@ -684,14 +700,14 @@ nav .in {
   transition-property: transform;
 }
 
-/* line 487, ../sass/screen.scss */
+/* line 500, ../sass/screen.scss */
 .hvr-grow:hover,
 .hvr-grow:focus,
 .hvr-grow:active {
   transform: scale(1.1);
 }
 
-/* line 494, ../sass/screen.scss */
+/* line 507, ../sass/screen.scss */
 .hvr-float {
   display: inline-block;
   vertical-align: middle;
@@ -706,13 +722,13 @@ nav .in {
   transition-timing-function: ease-out;
 }
 
-/* line 507, ../sass/screen.scss */
+/* line 520, ../sass/screen.scss */
 .hvr-float:hover, .hvr-float:focus, .hvr-float:active {
   -webkit-transform: translateY(-8px);
   transform: translateY(-8px);
   color: black;
 }
-/* line 511, ../sass/screen.scss */
+/* line 524, ../sass/screen.scss */
 .hvr-float:hover i, .hvr-float:focus i, .hvr-float:active i {
   color: #ff5f14;
 }
