--- a/styles/stylesheets/screen.css
+++ b/styles/stylesheets/screen.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
-/* line 5, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -21,45 +21,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../Desktop/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Downloads/compass.app.windows.1.29/compass.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
@@ -174,29 +174,12 @@ nav .in {
   border-bottom: 2px solid rgba(255, 95, 20, 0.9);
 }
 
-@media (max-width: 1060px) {
-  /* line 105, ../sass/screen.scss */
-  .navbar-brand {
-    visibility: hidden;
-  }
-}
-@media (max-width: 766px) {
-  /* line 110, ../sass/screen.scss */
-  .navbar-nav {
-    padding-top: 40px;
-  }
-
-  /* line 115, ../sass/screen.scss */
-  #extLinks {
-    visibility: hidden;
-  }
-}
-/* line 121, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 #bg {
   border-bottom: 3px solid #ff5f14;
   outline: 1px solid rgba(0, 0, 0, 0.3);
 }
-/* line 124, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 #bg #aboutMe {
   position: relative;
   width: 100%;
@@ -208,11 +191,11 @@ nav .in {
   margin: 0 auto;
   color: #fdfcfc;
 }
-/* line 134, ../sass/screen.scss */
+/* line 120, ../sass/screen.scss */
 #bg #aboutMe ul {
   padding: 0;
 }
-/* line 140, ../sass/screen.scss */
+/* line 126, ../sass/screen.scss */
 #bg #summary {
   color: black;
   position: relative;
@@ -222,7 +205,7 @@ nav .in {
   font-size: 1.3em;
   max-width: 800px;
 }
-/* line 149, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 #bg #summary #aboutBox {
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.5);
   background-color: white;
@@ -233,57 +216,62 @@ nav .in {
   color: rgba(0, 0, 0, 0.9);
   min-width: 460px;
 }
-/* line 158, ../sass/screen.scss */
+/* line 144, ../sass/screen.scss */
 #bg #summary #aboutBox h2 {
   color: black;
 }
-/* line 161, ../sass/screen.scss */
+/* line 147, ../sass/screen.scss */
 #bg #summary #aboutBox p {
   font-size: 14px;
   opacity: .8;
 }
-/* line 165, ../sass/screen.scss */
+/* line 151, ../sass/screen.scss */
 #bg #summary #aboutBox span {
   font-weight: bold;
   color: black;
 }
-/* line 171, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 #bg #essay {
   margin-top: 30px;
   color: black;
   padding: 5px;
   min-width: 500px;
 }
-/* line 177, ../sass/screen.scss */
+/* line 163, ../sass/screen.scss */
 #bg #essay ul {
   line-height: 23px;
   padding-left: 20px;
 }
-/* line 180, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 #bg #essay ul li {
   padding-left: 5px;
   list-style-type: square;
 }
-/* line 185, ../sass/screen.scss */
+/* line 171, ../sass/screen.scss */
 #bg #essay h3 {
   font-size: 2.5em;
 }
-/* line 188, ../sass/screen.scss */
+/* line 174, ../sass/screen.scss */
 #bg #essay h4 {
   margin-top: 20px;
   font-size: 1.3em;
   text-decoration: underline;
 }
-/* line 194, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
+#bg #essay span {
+  margin-bottom: 50px;
+  display: block;
+}
+/* line 184, ../sass/screen.scss */
 #bg #techList {
   margin-top: 20px;
 }
-/* line 196, ../sass/screen.scss */
+/* line 186, ../sass/screen.scss */
 #bg #techList ul {
   padding: 0 20px;
 }
 
-/* line 200, ../sass/screen.scss */
+/* line 190, ../sass/screen.scss */
 .selfie {
   height: 80vh;
   position: relative;
@@ -293,13 +281,13 @@ nav .in {
   background-position: center center;
 }
 
-/* line 213, ../sass/screen.scss */
+/* line 203, ../sass/screen.scss */
 #mainContent {
   padding: 0 50px;
   max-width: 1300px;
-  margin-top: 140px auto 0 auto;
+  margin: 140px auto 0 auto;
 }
-/* line 218, ../sass/screen.scss */
+/* line 208, ../sass/screen.scss */
 #mainContent art-disp div {
   background: black;
   margin-bottom: 20px;
@@ -314,7 +302,7 @@ nav .in {
   object-fit: contain;
   max-height: 700px;
 }
-/* line 231, ../sass/screen.scss */
+/* line 221, ../sass/screen.scss */
 #mainContent art-disp div img {
   overflow: auto;
   display: inline-block;
@@ -325,7 +313,7 @@ nav .in {
   min-height: 300px;
   max-height: 600px;
 }
-/* line 241, ../sass/screen.scss */
+/* line 231, ../sass/screen.scss */
 #mainContent art-disp div button {
   vertical-align: top;
   display: inline-block;
@@ -343,43 +331,43 @@ nav .in {
   color: #ff5f14;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-/* line 258, ../sass/screen.scss */
+/* line 248, ../sass/screen.scss */
 #mainContent art-disp div #left {
   left: 0;
 }
-/* line 259, ../sass/screen.scss */
+/* line 249, ../sass/screen.scss */
 #mainContent art-disp div #right {
   right: 0;
 }
-/* line 260, ../sass/screen.scss */
+/* line 250, ../sass/screen.scss */
 #mainContent art-disp div #ex1 {
   width: 80%;
 }
-/* line 263, ../sass/screen.scss */
+/* line 253, ../sass/screen.scss */
 #mainContent art-disp div .zoom {
   display: inline-block;
   position: relative;
 }
-/* line 267, ../sass/screen.scss */
+/* line 257, ../sass/screen.scss */
 #mainContent art-disp div .zoom img {
   display: inline-block;
 }
-/* line 270, ../sass/screen.scss */
+/* line 260, ../sass/screen.scss */
 #mainContent art-disp div .zoom img::selection {
   background-color: transparent;
 }
-/* line 274, ../sass/screen.scss */
+/* line 264, ../sass/screen.scss */
 #mainContent art-gall {
   flex: 1;
 }
-/* line 276, ../sass/screen.scss */
+/* line 266, ../sass/screen.scss */
 #mainContent art-gall .thumbnail {
   height: 275px;
   outline: 0;
   border: none;
   position: relative;
 }
-/* line 281, ../sass/screen.scss */
+/* line 271, ../sass/screen.scss */
 #mainContent art-gall .thumbnail img {
   object-fit: cover;
   height: 265px;
@@ -393,46 +381,53 @@ nav .in {
   border: 2px solid grey;
   box-shadow: 0 3px 10px rgba(100, 100, 100, 0.5);
 }
-/* line 295, ../sass/screen.scss */
+/* line 285, ../sass/screen.scss */
 #mainContent art-gall button {
   width: 100%;
   font-size: 1.5em;
   border: 1px solid #ff5f14;
   margin-bottom: 30px;
 }
-/* line 300, ../sass/screen.scss */
+/* line 290, ../sass/screen.scss */
 #mainContent art-gall button:focus {
   outline: none;
 }
 
-/* line 305, ../sass/screen.scss */
+/* line 295, ../sass/screen.scss */
 #videos {
   flex: 1;
   margin-top: 140px;
 }
-/* line 308, ../sass/screen.scss */
+/* line 298, ../sass/screen.scss */
+#videos span {
+  display: block;
+  background-color: black;
+  max-height: 600px;
+}
+/* line 303, ../sass/screen.scss */
 #videos .embed-responsive {
-  background-color: black !important;
   width: 70%;
-  max-height: 500px;
+  max-width: 800px;
   margin: 20px auto;
 }
-/* line 313, ../sass/screen.scss */
+/* line 307, ../sass/screen.scss */
 #videos .embed-responsive .embed-responsive-item {
   width: 100%;
+  max-height: 600px;
 }
-/* line 317, ../sass/screen.scss */
+/* line 313, ../sass/screen.scss */
 #videos .col-xs-12 {
   padding: 50px;
 }
-/* line 320, ../sass/screen.scss */
+/* line 316, ../sass/screen.scss */
 #videos .thumbnail {
   height: 275px;
   outline: 0;
   border: none;
   position: relative;
+  cursor: pointer;
 }
-/* line 325, ../sass/screen.scss */
+/* line 322, ../sass/screen.scss */
 #videos .thumbnail img {
   object-fit: cover;
   height: 265px;
@@ -447,12 +442,12 @@ nav .in {
   box-shadow: 0 3px 10px rgba(100, 100, 100, 0.5);
 }
 
-/* line 341, ../sass/screen.scss */
+/* line 338, ../sass/screen.scss */
 #instructions {
   text-align: center;
 }
 
-/* line 342, ../sass/screen.scss */
+/* line 339, ../sass/screen.scss */
 #contactPage {
   padding: 0 100px;
   min-width: 500px;
@@ -462,7 +457,7 @@ nav .in {
   font-size: 16px;
   line-height: 1.5em;
 }
-/* line 350, ../sass/screen.scss */
+/* line 347, ../sass/screen.scss */
 #contactPage .wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -470,7 +465,7 @@ nav .in {
   grid-auto-rows: minmax(100px, auto);
   height: 600px;
 }
-/* line 356, ../sass/screen.scss */
+/* line 353, ../sass/screen.scss */
 #contactPage .wrapper .one {
   grid-column: 1;
   grid-row: 1;
@@ -479,38 +474,38 @@ nav .in {
   overflow: auto;
   min-width: 150px;
 }
-/* line 363, ../sass/screen.scss */
+/* line 360, ../sass/screen.scss */
 #contactPage .wrapper .one div {
   width: auto;
   display: block;
   text-align: center;
   overflow: auto;
 }
-/* line 368, ../sass/screen.scss */
+/* line 365, ../sass/screen.scss */
 #contactPage .wrapper .one div form {
   margin-top: 20px;
   text-align: center;
 }
-/* line 371, ../sass/screen.scss */
+/* line 368, ../sass/screen.scss */
 #contactPage .wrapper .one div form .errorMessage {
   font-size: 13px;
   height: 25px;
 }
-/* line 375, ../sass/screen.scss */
+/* line 372, ../sass/screen.scss */
 #contactPage .wrapper .one div form .invalid {
   border: 2px solid red !important;
 }
-/* line 376, ../sass/screen.scss */
+/* line 373, ../sass/screen.scss */
 #contactPage .wrapper .one div form .valid {
   border: 2px solid lightgreen !important;
 }
-/* line 380, ../sass/screen.scss */
+/* line 377, ../sass/screen.scss */
 #contactPage .wrapper .two {
   grid-column: 2;
   grid-row: 1;
   display: block;
 }
-/* line 384, ../sass/screen.scss */
+/* line 381, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox {
   border-radius: 2px;
   height: auto;
@@ -525,16 +520,16 @@ nav .in {
   display: block;
   box-shadow: 0 3px 5px rgba(100, 100, 100, 0.5);
 }
-/* line 397, ../sass/screen.scss */
+/* line 394, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox button {
   margin-bottom: 20px;
 }
-/* line 398, ../sass/screen.scss */
+/* line 395, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox #preview {
   padding: 10px 25px;
   background-color: rgba(200, 200, 200, 0.1);
 }
-/* line 402, ../sass/screen.scss */
+/* line 399, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox #title {
   width: auto;
   height: 40px;
@@ -545,7 +540,7 @@ nav .in {
   margin-left: 25px;
   text-align: left;
 }
-/* line 411, ../sass/screen.scss */
+/* line 408, ../sass/screen.scss */
 #contactPage .wrapper .two #previewBox #title i {
   color: lightgreen;
   font-size: 25px;
@@ -555,12 +550,13 @@ nav .in {
   right: 10px;
 }
 
-/* line 424, ../sass/screen.scss */
+/* line 421, ../sass/screen.scss */
 #success {
+  margin-top: 150px;
   text-align: center;
 }
 
-/* line 427, ../sass/screen.scss */
+/* line 426, ../sass/screen.scss */
 .viewFade {
   margin-top: 140px;
   -webkit-animation: fadein .3s linear forwards;
@@ -578,39 +574,39 @@ nav .in {
     opacity: 1;
   }
 }
-/* line 437, ../sass/screen.scss */
+/* line 436, ../sass/screen.scss */
 .about {
   opacity: 0;
 }
 
-/* line 440, ../sass/screen.scss */
+/* line 439, ../sass/screen.scss */
 .about.animated {
   animation-name: intro;
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
 
-/* line 445, ../sass/screen.scss */
+/* line 444, ../sass/screen.scss */
 .about.animated:nth-child(2) {
   animation-delay: .3s;
 }
 
-/* line 446, ../sass/screen.scss */
+/* line 445, ../sass/screen.scss */
 .about.animated:nth-child(3) {
   animation-delay: 1.8s;
 }
 
-/* line 447, ../sass/screen.scss */
+/* line 446, ../sass/screen.scss */
 .about.animated:nth-child(4) {
   animation-delay: 3.5s;
 }
 
-/* line 449, ../sass/screen.scss */
+/* line 448, ../sass/screen.scss */
 .list {
   opacity: 0;
 }
 
-/* line 452, ../sass/screen.scss */
+/* line 451, ../sass/screen.scss */
 .list.animated {
   animation-name: fadeInDown;
   animation-duration: 1s;
@@ -618,52 +614,52 @@ nav .in {
   animation-fill-mode: forwards;
 }
 
-/* line 458, ../sass/screen.scss */
+/* line 457, ../sass/screen.scss */
 .list.animated:nth-child(2) {
   animation-delay: 5.6s;
 }
 
-/* line 459, ../sass/screen.scss */
+/* line 458, ../sass/screen.scss */
 .list.animated:nth-child(3) {
   animation-delay: 6.2s;
 }
 
-/* line 460, ../sass/screen.scss */
+/* line 459, ../sass/screen.scss */
 .list.animated:nth-child(4) {
   animation-delay: 6.8s;
 }
 
-/* line 461, ../sass/screen.scss */
+/* line 460, ../sass/screen.scss */
 .list.animated:nth-child(5) {
   animation-delay: 7.4s;
 }
 
-/* line 462, ../sass/screen.scss */
+/* line 461, ../sass/screen.scss */
 .list.animated:nth-child(6) {
   animation-delay: 8.0s;
 }
 
-/* line 463, ../sass/screen.scss */
+/* line 462, ../sass/screen.scss */
 .list.animated:nth-child(7) {
   animation-delay: 8.6s;
 }
 
-/* line 464, ../sass/screen.scss */
+/* line 463, ../sass/screen.scss */
 .list.animated:nth-child(8) {
   animation-delay: 9.2s;
 }
 
-/* line 465, ../sass/screen.scss */
+/* line 464, ../sass/screen.scss */
 .list.animated:nth-child(9) {
   animation-delay: 9.8s;
 }
 
-/* line 466, ../sass/screen.scss */
+/* line 465, ../sass/screen.scss */
 .list.animated:nth-child(10) {
   animation-delay: 10.4s;
 }
 
-/* line 467, ../sass/screen.scss */
+/* line 466, ../sass/screen.scss */
 .list.animated:nth-child(11) {
   animation-delay: 11.0s;
 }
@@ -688,7 +684,7 @@ nav .in {
     transform: none;
   }
 }
-/* line 490, ../sass/screen.scss */
+/* line 489, ../sass/screen.scss */
 .hvr-grow {
   display: inline-block;
   vertical-align: middle;
@@ -700,14 +696,14 @@ nav .in {
   transition-property: transform;
 }
 
-/* line 500, ../sass/screen.scss */
+/* line 499, ../sass/screen.scss */
 .hvr-grow:hover,
 .hvr-grow:focus,
 .hvr-grow:active {
   transform: scale(1.1);
 }
 
-/* line 507, ../sass/screen.scss */
+/* line 506, ../sass/screen.scss */
 .hvr-float {
   display: inline-block;
   vertical-align: middle;
@@ -722,13 +718,31 @@ nav .in {
   transition-timing-function: ease-out;
 }
 
-/* line 520, ../sass/screen.scss */
+/* line 519, ../sass/screen.scss */
 .hvr-float:hover, .hvr-float:focus, .hvr-float:active {
   -webkit-transform: translateY(-8px);
   transform: translateY(-8px);
   color: black;
 }
-/* line 524, ../sass/screen.scss */
+/* line 523, ../sass/screen.scss */
 .hvr-float:hover i, .hvr-float:focus i, .hvr-float:active i {
   color: #ff5f14;
+}
+
+@media (max-width: 1060px) {
+  /* line 529, ../sass/screen.scss */
+  .navbar-brand {
+    visibility: hidden;
+  }
+}
+@media (max-width: 766px) {
+  /* line 535, ../sass/screen.scss */
+  .navbar-nav {
+    padding-top: 40px;
+  }
+
+  /* line 538, ../sass/screen.scss */
+  #extLinks {
+    visibility: hidden;
+  }
 }
