--- a/views/videoGall.html
+++ b/views/videoGall.html
@@ -1,7 +1,9 @@
 <div id="videos">
+  <span>
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe ng-src="{{url}}" class="embed-responsive-item" allowfullscreen="true"></iframe>
+    <iframe ng-src="{{url}}" class="embed-responsive-item" allowfullscreen></iframe>
   </div>
+  </span>
 
 
     <div class="col-lg-4 col-sm-6 col-xs-12" ng-repeat="pic in files">
@@ -11,8 +13,7 @@
         <img ng-src="{{pic.url}}" id="{{$index}}" ng-click="changeVid($index)" class="hvr-grow"/>
 
     </div>
-    <p>
-      {{pic.title}}
-    </p>
+    <h3>{{pic.title}}</h3>
+    <p>{{pic.cap}}</p>
 
 </div>
