--- a/styles/sass/screen.scss
+++ b/styles/sass/screen.scss
@@ -4,41 +4,73 @@
 // * {
 //   border: 1px solid green !important;
 // }
-html {
-  overflow-y: scroll;
-}
+html { overflow-y: scroll; }
 body {
   font-size: 18px;
   font-family: 'Roboto Condensed', sans-serif !important;
   background-color: rgba(200, 200, 200, .1) !important;
 }
+
 // navigation bar
 nav {
-  background-color: white;
-  min-width: 500px;
+  height: 100px;
   width: auto;
+  min-width: 500px;
   font-size: 1.3em;
   letter-spacing: 1px;
   border-top: 3px solid $primaryColor !important;
   box-shadow: 0 3px 5px rgba(100, 100, 100, .5);
-  height: 100px;
+  background-color: white;
+  button {
+    width: 50px;
+    height: 40px;
+    position: relative;
+    padding: 3px;
+    top: -5px;
+    box-shadow: 0 0 2px rgba(100, 100, 100, .5);
+    i {
+      position: relative;
+      top: -5px;
+    }
+  }
+  .navbar-brand {
+    font-size: 2em;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    color: #000000;
+    margin-top: 22px;
+    position: absolute;
+    right: 10px;
+    &:focus { color:black; }
+    &:hover { color: $primaryColor; }
+  }
+  .navbar-toggle {
+    font-size: 1.3em;
+    position: absolute;
+    float: left;
+    top: 20px;
+    left: 50px;
+  }
   #extLinks {
+    font-size: 1.2em;
     padding-left: 7px;
     padding-top: 10px;
-    font-size: 1.2em;
     a {
       color: black;
       margin: 0 6px;
     }
   }
+  .container-fluid { background-color: white; }
+  .collapse.in { max-height: 500px !important; }
+  .in { border-bottom: 2px solid rgba(255, 95, 20, .9); }
   div {
     ul {
       padding-left: 80px;
       li {
         padding: 0;
         a {
-          margin-top: 10px;
           color: black;
+          margin-top: 10px;
           &:hover {
             position: relative;
             box-shadow: 0 3px 5px rgba(100, 100, 100, .5);
@@ -51,56 +83,6 @@ nav {
       }
     }
   }
-  button {
-    position: relative;
-    top: -5px;
-    box-shadow: 0 0 2px rgba(100, 100, 100, .5);
-    padding: 3px;
-    width: 50px;
-    height: 40px;
-    i {
-      position: relative;
-      top: -5px;
-    }
-  }
-  .navbar-brand {
-  	font-size: 2em;
-  	letter-spacing: 5px;
-  	text-transform: uppercase;
-  	color: #000000;
-  	margin-top: 22px;
-    position: absolute;
-    right: 10px;
-    // right: 3%;
-    &:focus {
-      color:black;
-    }
-    &:hover {
-      color: $primaryColor;
-    }
-  }
-  .navbar-toggle {
-  	float: left;
-    position: absolute;
-    top: 20px;
-    left: 50px;
-    font-size: 1.3em;
-  }
-  .container-fluid {
-    background-color: white;
-    // margin-top: 90px;
-    // border-bottom: 2px solid rgba(255, 95, 20, .9);
-    // box-shadow: 0 3px 5px rgba(100, 100, 100, .5);
-  }
-  .collapse.in {
-    max-height: 500px !important;
-  }
-  .in {
-    border-bottom: 2px solid rgba(255, 95, 20, .9);
-  }
-  #extLinks {
-    // visibility: hidden;
-  }
 }
 
 // homepage
@@ -108,42 +90,34 @@ nav {
   border-bottom: 3px solid $primaryColor;
   outline: 1px solid rgba(0, 0, 0, .3);
   #aboutMe {
-    position: relative;
     width: 100%;
     min-height: 600px;
     min-width: 600px;
-    padding: 50px;
-    padding-left: 25%;
     font-size: 16px;
+    position: relative;
+    padding: 50px 50px 50px 25%;
     margin: 0 auto;
     color: hsl(19, 17%, 99%);
-    ul {
-      // list-style: none;
-      padding: 0;
-    }
-
+    ul { padding: 0; }
   }
   #summary {
-    color: black;
-    position: relative;
-    width: 60%;
-    margin: 0 auto;
-    top: -120px;
     font-size: 1.3em;
+    width: 60%;
     max-width: 800px;
-
+    margin: 0 auto;
+    position: relative;
+    top: -120px;
+    color: black;
     #aboutBox {
-      box-shadow: 0 3px 5px rgba(100, 100, 100, .5);
-      background-color: white;
       height: 150px;
+      min-width: 460px;
+      line-height: 13px;
       text-align: center;
       padding: 10px;
-      line-height: 13px;
       color: rgba(0, 0, 0, .9);
-      min-width: 460px;
-      h2 {
-        color: black;
-      }
+      background-color: white;
+      box-shadow: 0 3px 5px rgba(100, 100, 100, .5);
+      h2 { color: black; }
       p {
         font-size: 14px;
         opacity: .8;
@@ -155,11 +129,11 @@ nav {
     }
   }
   #essay {
-    margin-top: 30px;
-    color: black;
-    padding: 5px;
     min-width: 500px;
-
+    margin-top: 30px;
+    padding: 5px;
+    color: black;
+    h3 { font-size: 2.5em; }
     ul {
       line-height: 23px;
       padding-left: 20px;
@@ -168,13 +142,10 @@ nav {
         list-style-type: square;
       }
     }
-    h3 {
-      font-size: 2.5em;
-    }
     h4 {
-      margin-top: 20px;
       font-size: 1.3em;
       text-decoration: underline;
+      margin-top: 20px;
     }
     span {
       margin-bottom: 50px;
@@ -183,10 +154,9 @@ nav {
   }
   #techList {
     margin-top: 20px;
-    ul {padding: 0 20px;}
+    ul { padding: 0 20px; }
   }
 }
-
 .selfie {
   height: 80vh;
   position: relative;
@@ -199,65 +169,60 @@ nav {
   background-size: cover;
   background-position: center center;
 }
+
 // art gallery
 #mainContent {
-  padding: 0 50px;
   max-width: 1300px;
+  padding: 0 50px;
   margin: 140px auto 0 auto;
   art-disp {
     div {
-    	background:black;
-    	margin-bottom: 20px;
-    	overflow: auto;
+      height: auto;
+      width: 100%;
+      max-height: 700px;
+      min-width: 500px;
     	text-align: center;
     	position: relative;
+      margin-bottom: 20px;
+      background:black;
       box-shadow: 0 5px 10px rgba(0, 0, 0, .7);
     	border-radius: 5px;
-    	height: auto;
-      width: 100%;
-      min-width: 500px;
+      overflow: auto;
       object-fit: contain;
-      max-height: 700px;
-      img {
-        overflow: auto;
-        display:inline-block;
-        position: relative;
-        height: auto;
-        width: 100%;
-        object-fit: contain;
-        min-height: 300px;
-        max-height: 600px;
-      }
-      button {
-        vertical-align: top;
-        display: inline-block;
-      	position: absolute;
-      	height: 100%;
-        background-color: white;
-      	outline: none;
-        padding: 0;
-        border-radius: 0;
-      	border: 1px solid grey;
-      	text-align: center;
-      	font-size: 3em;
-        width: 40px;
-        text-align: center;
-      	color: #ff5f14;
-        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-      }
       #left { left: 0; }
       #right { right: 0; }
-      #ex1 {
-        width: 80%;
-      }
+      #ex1 { width: 80%; }
       .zoom {
         display:inline-block;
         position: relative;
       }
-      .zoom img {
+      .zoom img { display: inline-block; }
+      .zoom img::selection { background-color: transparent; }
+      img {
+        height: auto;
+        width: 100%;
+        min-height: 300px;
+        max-height: 600px;
         display: inline-block;
+        position: relative;
+        object-fit: contain;
+        overflow: auto;
       }
-      .zoom img::selection { background-color: transparent;
+      button {
+        height: 100%;
+        width: 40px;
+        font-size: 3em;
+        text-align: center;
+        vertical-align: top;
+        display: inline-block;
+      	position: absolute;
+      	outline: none;
+        padding: 0;
+        border-radius: 0;
+      	border: 1px solid grey;
+        color: #ff5f14;
+        background-color: white;
+        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
       }
     }
   }
@@ -265,21 +230,21 @@ nav {
     flex: 1;
     .thumbnail {
       height: 275px;
+      position: relative;
       outline: 0;
       border: none;
-      position: relative;
       img {
-        object-fit: cover;
         height: 265px;
         width: 180%;
-        border-radius: 10px;
-        position: absolute;
         text-align: center;
+        padding: 3px;
+        position: absolute;
         margin-top: -133px;
         top: 50%;
-        padding: 3px;
         border: 2px solid grey;
+        border-radius: 10px;
         box-shadow: 0 3px 10px rgba(100, 100, 100, .5);
+        object-fit: cover;
       }
     }
     button {
@@ -291,14 +256,17 @@ nav {
     }
   }
 }
+
 //video gallery
 #videos {
   flex: 1;
-  margin-top: 140px;
+  max-width: 1300px;
+  margin: 140px auto 0 auto;
+  padding: 0 50px;
   span {
+    max-height: 600px;
     display: block;
     background-color: black;
-    max-height: 600px;
   }
   .embed-responsive {
     width: 70%;
@@ -307,84 +275,89 @@ nav {
     .embed-responsive-item {
       width: 100%;
       max-height: 600px;
-
     }
-  }
-  .col-xs-12 {
-    padding: 50px;
   }
   .thumbnail {
     height: 275px;
+    position: relative;
     outline: 0;
     border: none;
-    position: relative;
     cursor: pointer;
     img {
-      object-fit: cover;
       height: 265px;
       width: 180%;
-      border-radius: 10px;
-      position: absolute;
       text-align: center;
+      position: absolute;
+      padding: 3px;
       margin-top: -133px;
       top: 50%;
-      padding: 3px;
       border: 2px solid grey;
+      border-radius: 10px;
       box-shadow: 0 3px 10px rgba(100, 100, 100, .5);
+      object-fit: cover;
     }
   }
 }
 
+//contact page
 #instructions { text-align: center; }
 #contactPage {
-  padding: 0 100px;
   min-width: 500px;
-  max-width: 800px;
+  max-width: 900px;
   width: auto;
-  margin: 140px auto 0 auto;
-  font-size: 16px;
+  font-size: 1.5em;
   line-height: 1.5em;
+  padding: 0 50px;
+  margin: 140px auto 0 auto;
   .wrapper {
+    height: 600px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
-    height: 600px;
     .one {
+      min-width: 220px;
       grid-column: 1;
       grid-row: 1;
-      float: right;
       display: block;
+      float: right;
       overflow: auto;
-      min-width: 150px;
+      input { width: 200px; }
       div {
         width: auto;
-        display: block;
         text-align: center;
+        display: block;
         overflow: auto;
         form {
-          margin-top: 20px;
+          width: 100%;
           text-align:center;
-          .errorMessage {
-            font-size: 13px;
-            height: 25px;
-          }
-          .invalid { border: 2px solid red !important;}
+          margin-top: 20px;
+          .invalid { border: 2px solid red !important; }
           .valid { border: 2px solid lightgreen !important; }
+          .errorMessage {
+            height: 35px;
+            font-size: .8em;
+            text-align:center;
+            display: block;
+            margin: 0 auto;
+          }
         }
       }
     }
     .two {
+      min-width: 220px;
       grid-column: 2;
       grid-row: 1;
       display: block;
+      padding-right: 30px;
+
       #previewBox {
         border-radius: 2px;
         height: auto;
         min-height: 200px;
         width: auto;
-        min-width: 150px;
-        max-width: 320px;
+        min-width: 200px;
+        max-width: 350px;
         word-wrap: break-word;
         line-height: 25px;
         margin-top: 20px;
